fix(chat): re-fix letting long messages wrap

--- a/css/_chat.scss
+++ b/css/_chat.scss
@@ -312,6 +312,10 @@
         }
     }
 
+    .chatmessage-wrapper {
+        max-width: 100%;
+    }
+
     .chatmessage {
         background-color: $chatRemoteMessageBackgroundColor;
         border-radius: 0px 6px 6px 6px;
